app/src/main/java/com/example/vicollector/core/error/CameraException.kt
package com.example.vicollector.core.error

class CameraException(
    message: String,
    cause: Throwable? = null,
) : CaptureException(message, cause)
